2007-02-22  Yen-Ju Chen <yjchenx at gmail>

	* Finish AttributesPane.
	* Add FilePopUpPresentation which shows icon and name
	  between popup button and pane.
	* Finish ToolsPane.

2007-02-21  Yen-Ju Chen <yjchenx at gmail>

	* Use PaneKit for Inspector.

2007-02-19  Yen-Ju Chen <yjchenx at gmail>

	* Initial import.
	* Update license to BSD.
	* Move gorm files from OpenSpaceManager.
