@@ -1,3 +1,8 @@
+2007-02-23  Yen-Ju Chen <yjchenx at gmail>
+
+	* Fix missing images for permissions view.
+	* Support dynamic menu for available inspector panes.
+
 2007-02-22  Yen-Ju Chen <yjchenx at gmail>
 
 	* Finish AttributesPane.
